5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1575_996.log
== TEST (2019-03-12 11:25:23) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *
")
print("* --- *")
print("*****")
-- ERROR:
File "XXXX", line 3
    print("*  ^  *
                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:27:44) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:27:52) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.195388
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
